# strictql-postgres

./: CHANGELOG.md  Justfile  README.md  pyproject.toml  Работа с функциями.md
.github/workflows/: lint.yml  release.yml  test.yml
asyncpg/: connection.pyi  pool.pyi  types.pyi
pglast/: __init__.pyi  ast.pyi
strictql_postgres/: __main__.py  api.py  asyncpg_result_converter.py  asyncpg_utils.py  automatic_dependencies_updater.py  code_generator.py  code_quality.py  common_types.py  complex_type_converter.py  config_manager.py  config_reader.py  dir_diff.py  directory_reader.py  generated_code_writer.py  meta_file.py  new_config_manager.py  pg_bind_params_type_getter.py  pg_response_schema_getter.py  python_types.py  queries_generator.py  queries_to_generate.py  query_generator.py  string_in_snake_case.py  supported_postgres_types.py  table_field_getter.py  toml_parser.py  type_str_creator.py  types.py
strictql_postgres/strictql_generated/: strictql_meta.json
strictql_postgres/templates/: execute_with_params.txt  execute_without_params.txt  fetch_all_with_params.txt  (+4 more)
tests/: conftest.py  pg_types_test_data.py  test_api.py  test_asyncpg_converter.py  test_code_quality.py  test_complex_type_converter.py  test_config_manager.py  test_create_type_str.py  test_dir_diff.py  test_directory_reader.py  test_generate_and_execute.py  test_meta_file.py  test_new_config_manager.py  test_pg_bind_params_type_getter.py  test_pg_response_schema_getter.py  test_queries_generator.py  test_string_in_snake_case.py  test_table_field_getter.py  test_toml_parser.py  test_types.py
(+21 files in other folders)
