[project]
name = "strictql-postgres"
version = "0.0.1"
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Bulygin Evgeny", email = "tyztuz@gmail.com" },
]
dependencies = [
  "asyncpg",
  "pglast"
]

[dependency-groups]
test = ["pytest", "pytest-cov"]

[tool.uv]
default-groups = ["test"]